// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Icon Button Close Button Example 1`] = `
<button
  aria-label="Close"
  className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiIconButton-label"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-outlined-navigation-close NatDSIcon-root-1354 NatDSIcon-tinyFontSize-1356"
    >
      outlined-navigation-close
    </i>
  </span>
</button>
`;

exports[`Storyshots Components/Icon Button Default Color 1`] = `
<button
  className="MuiButtonBase-root MuiIconButton-root"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiIconButton-label"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-filled-default-mockup NatDSIcon-root-1194 NatDSIcon-smallFontSize-1197"
    >
      filled-default-mockup
    </i>
  </span>
</button>
`;

exports[`Storyshots Components/Icon Button Disabled 1`] = `
<button
  className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary Mui-disabled Mui-disabled"
  disabled={true}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={-1}
  type="button"
>
  <span
    className="MuiIconButton-label"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-filled-default-mockup NatDSIcon-root-1306 NatDSIcon-smallFontSize-1309"
    >
      filled-default-mockup
    </i>
  </span>
</button>
`;

exports[`Storyshots Components/Icon Button Filter Button Example 1`] = `
<button
  aria-label="Filter"
  className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiIconButton-label"
  >
    <span
      className="MuiBadge-root"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-filter NatDSIcon-root-1370 NatDSIcon-tinyFontSize-1372"
      >
        outlined-action-filter
      </i>
      <span
        className="MuiTypography-root MuiTypography-srOnly"
      >
        Filters (1 active)
      </span>
      <span
        className="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorSecondary"
      >
        1
      </span>
    </span>
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Storyshots Components/Icon Button Inherit Color 1`] = `
<button
  className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiIconButton-label"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-filled-default-mockup NatDSIcon-root-1178 NatDSIcon-smallFontSize-1181"
    >
      filled-default-mockup
    </i>
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Storyshots Components/Icon Button Medium With Small Icon 1`] = `
<button
  className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiIconButton-label"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-filled-default-mockup NatDSIcon-root-1290 NatDSIcon-smallFontSize-1293"
    >
      filled-default-mockup
    </i>
  </span>
</button>
`;

exports[`Storyshots Components/Icon Button Medium With Tiny Icon And Default Color 1`] = `
<button
  className="MuiButtonBase-root MuiIconButton-root"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiIconButton-label"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-filled-default-mockup NatDSIcon-root-1274 NatDSIcon-tinyFontSize-1276"
    >
      filled-default-mockup
    </i>
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Storyshots Components/Icon Button Medium With Tiny Icon And Primary Color 1`] = `
<button
  className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiIconButton-label"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-filled-default-mockup NatDSIcon-root-1242 NatDSIcon-tinyFontSize-1244"
    >
      filled-default-mockup
    </i>
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Storyshots Components/Icon Button Medium With Tiny Icon And Secondary Color 1`] = `
<button
  className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiIconButton-label"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-filled-default-mockup NatDSIcon-root-1258 NatDSIcon-tinyFontSize-1260"
    >
      filled-default-mockup
    </i>
  </span>
</button>
`;

exports[`Storyshots Components/Icon Button Menu Button Example 1`] = `
<button
  aria-label="Toggle menu"
  className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiIconButton-label"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-filled-navigation-menu NatDSIcon-root-1322 NatDSIcon-tinyFontSize-1324"
    >
      filled-navigation-menu
    </i>
  </span>
</button>
`;

exports[`Storyshots Components/Icon Button My Profile Button Example 1`] = `
<button
  aria-label="My Profile"
  className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiIconButton-label"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-outlined-social-myprofile NatDSIcon-root-1386 NatDSIcon-tinyFontSize-1388"
    >
      outlined-social-myprofile
    </i>
  </span>
</button>
`;

exports[`Storyshots Components/Icon Button Playground 1`] = `
<button
  className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiIconButton-label"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-filled-default-mockup NatDSIcon-root-1130 NatDSIcon-smallFontSize-1133"
    >
      filled-default-mockup
    </i>
  </span>
</button>
`;

exports[`Storyshots Components/Icon Button Primary Color 1`] = `
<button
  className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiIconButton-label"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-filled-default-mockup NatDSIcon-root-1146 NatDSIcon-smallFontSize-1149"
    >
      filled-default-mockup
    </i>
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Storyshots Components/Icon Button Search Button Example 1`] = `
<button
  aria-label="Search"
  className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiIconButton-label"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-search NatDSIcon-root-1338 NatDSIcon-tinyFontSize-1340"
    >
      outlined-action-search
    </i>
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Storyshots Components/Icon Button Secondary Color 1`] = `
<button
  className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiIconButton-label"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-filled-default-mockup NatDSIcon-root-1162 NatDSIcon-smallFontSize-1165"
    >
      filled-default-mockup
    </i>
  </span>
</button>
`;

exports[`Storyshots Components/Icon Button Small With Small Icon 1`] = `
<button
  className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiIconButton-label"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-filled-default-mockup NatDSIcon-root-1226 NatDSIcon-smallFontSize-1229"
    >
      filled-default-mockup
    </i>
  </span>
</button>
`;

exports[`Storyshots Components/Icon Button Small With Tiny Icon 1`] = `
<button
  className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiIconButton-label"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-filled-default-mockup NatDSIcon-root-1210 NatDSIcon-tinyFontSize-1212"
    >
      filled-default-mockup
    </i>
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;
